@@ -10,6 +10,7 @@ spidertron-enhancements-enter-vehicles=Depends on mod settings and whether you a
 spidertron-enhancements-enter-entity-base-game=Enable standard control __CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__ to enter/leave vehicles from a spidertron
 spidertron-enhancements-enter-entity-custom=Enable custom control __CONTROL_STYLE_BEGIN____CONTROL__spidertron-enhancements-enter-vehicles____CONTROL_STYLE_END__ to enter/leave vehicles from a spidertron
 spidertron-enhancements-enter-player=Enable __CONTROL_STYLE_BEGIN____CONTROL__spidertron-enhancements-enter-vehicles____CONTROL_STYLE_END__ to quickly exit (and re-enter) a spidertron
+spidertron-enhancements-auto-sort-inventory=Automatically sort spidertron's inventory
 spidertron-enhancements-spill-on-death=Spill spidertron's items onto ground upon death
 
 
