@@ -3,24 +3,35 @@ data:extend({
         type = "bool-setting",
         name = "spidertron-enhancements-enter-entity-base-game",
         setting_type = "runtime-global",
-        default_value = true
+        default_value = true,
+        order = "aa"
     },
     {
         type = "bool-setting",
         name = "spidertron-enhancements-enter-entity-custom",
         setting_type = "runtime-global",
-        default_value = true
+        default_value = true,
+        order = "ab"
     },
     {
         type = "bool-setting",
         name = "spidertron-enhancements-enter-player",
         setting_type = "runtime-global",
-        default_value = true
+        default_value = true,
+        order = "b"
+    },
+    {
+        type = "bool-setting",
+        name = "spidertron-enhancements-auto-sort-inventory",
+        setting_type = "runtime-global",
+        default_value = true,
+        order = "c"
     },
     {
         type = "bool-setting",
         name = "spidertron-enhancements-spill-on-death",
         setting_type = "runtime-global",
-        default_value = true
+        default_value = true,
+        order = "d"
     },
 })
