@@ -2,6 +2,7 @@
 Version: 1.1.1
 Date: ???
   Features:
+    - Automatically sorts spidertron inventory
     - Added smoke effect when reactivating hidden spidertron
   Bugfixes:
     - Fixed selected weapon slot being reset to slot 1 when spidertron is reactivated
